--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,5 +14,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Create ENV
+      run: |
+        touch .env
+        touch python/.env
+        echo ${{ secrets.ENV }} >> .env
+        echo ${{ secrets.ENV }} >> python/.env
+        cat .env
+    - name: Create other ENV
+      run: |
+        touch 
+        echo $$
     - name: Build the Docker image
       run: docker compose -f docker-compose.yml up --build
