--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,8 +18,8 @@ jobs:
       run: |
         touch .env
         touch python/.env
-        echo ${{ secrets.ENV }} >> .env
-        echo ${{ secrets.ENV }} >> python/.env
+        echo "${{ secrets.ENV }}" > .env
+        cat .env > python/.env
         cat .env
     - name: Build the Docker image
       run: docker compose -f docker-compose.yml up --build
