--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,10 +14,12 @@ jobs:
     - uses: actions/checkout@v3
     - name: Create ENV
       run: |
+        ls
+        ls python
         touch .env
         touch python/.env
         echo "${{ secrets.ENV }}" > .env
-        cat .env > /python/.env
+        cat .env > python/.env
         cat .env
     - name: Compose UP
       run: docker compose -f docker-compose.yml up --build
