--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Checkout latest
       uses: actions/checkout@v4.1.1
     - name: Use inside docker
-      uses: docker://bookworm-slim:latest
+      uses: docker://debian:bookworm-slim
     - name: Create ENV
       run: |
         ls
