--- a/schemas/ai-plugin.yaml
+++ b/schemas/ai-plugin.yaml
@@ -1,8 +1,9 @@
 openapi: 3.1.0
 info:
-  title: Google Search
-  description: Use Google Search to search the web and get page summaries
-  version: 1.0.0
+  title: Web Search
+  description: Use Web Search to search the web and get page summaries. Try changing your query prompt if you aren't
+    getting the desired results.
+  version: 1.1.0
 servers:
   - url: https://gptsearch.cyberthing.dev
     description: Search server
@@ -10,21 +11,14 @@ paths:
   /search:
     get:
       operationId: query
-      summary: Perform a custom Google search and return snippets and their urls
+      summary: Perform a custom Web search and return snippets and their urls
       parameters:
         - name: q
           in: query
           required: true
-          description: The search query string
+          description: The search string
           schema:
             type: string
-        - name: page
-          in: query
-          required: false
-          description: The page number to return
-          schema:
-            type: integer
-            default: 1
       responses:
         "200":
           description: An array of search results and the current time
@@ -33,22 +27,23 @@ paths:
               schema:
                 type: object
                 properties:
+                  links:
+                    type: array
+                    description: Relevant links
+                    items:
+                      type: string
                   date:
                     type: string
+                    description: The current GMT date and time
                   results:
                     type: array
                     items:
-                      type: object
-                      properties:
-                        snippet:
-                          type: string
-                        link:
-                          type: string
+                      type: string
   /browse:
     post:
       x-openai-isConsequential: false
       operationId: browse
-      summary: Browse articles/pages
+      summary: Get relevant paragraphs to your site query. Both url and topic are required.
       requestBody:
         required: true
         content:
@@ -56,21 +51,43 @@ paths:
             schema:
               type: object
               properties:
-                urls:
-                  type: array
-                  items:
-                    type: string
+                url:
+                  type: string
+                topic:
+                  type: string
+                  description: What information you want to get from the site
       responses:
         "200":
-          description: An array of summaries for the provided URLs
+          description: The best matches in the database.
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    summary:
+                type: object
+                properties:
+                  results:
+                    type: array
+                    items:
                       type: string
-                    url:
+  /self:
+    get:
+      operationId: self
+      summary: Query the API about a topic you have already researched.
+      parameters:
+        - name: q
+          in: query
+          required: true
+          description: The search string
+          schema:
+            type: string
+      responses:
+        "200":
+          description: The current version of the API
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  result:
+                    type: array
+                    items:
                       type: string
