--- a/python/.env.template
+++ b/python/.env.template
@@ -1,4 +1,4 @@
 EMBEDMODEL="text-embedding-ada-002 is preferred"
 OPENAIKEY="key here"
 OPENAIORG="org ID (found in org account main settings page) here"
-CHATMODEL="gpt4-preview is preferred"
+CHATMODEL="gpt-4-1106-preview is preferred"
