--- a/schemas/ai-plugin.yaml
+++ b/schemas/ai-plugin.yaml
@@ -1,9 +1,9 @@
-openapi: 3.1.1
+openapi: 3.1.0
 info:
   title: Web Search
   description: Use Web Search to search the web and get page summaries. Try changing your query prompt if you aren't
     getting the desired results.
-  version: 1.1.0
+  version: 1.1.2
 servers:
   - url: https://gptsearch.cyberthing.dev
     description: Search server
@@ -91,3 +91,6 @@ paths:
                     type: array
                     items:
                       type: string
+                  date:
+                    type: string
+                    description: The current GMT date and time
