--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     env_file: ./python/.env
     image: purplelemons/embedding-db
     volumes:
-      - data:/app/db/data
+      - python/data:/app/db/data
     tty: true
     restart: always
 
