--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     env_file: ./python/.env
     image: purplelemons/embedding-db
     volumes:
-      - python/data:/app/db/data
+      - data:/app/db/data
     tty: true
     restart: always
 
@@ -25,4 +25,4 @@ services:
     ports:
      - 3658:8181
     restart: always
-    env_file: .env
+    env_file: .env 
