--- a/schemas/ai-plugin.yaml
+++ b/schemas/ai-plugin.yaml
@@ -1,7 +1,7 @@
 openapi: 3.1.0
 info:
   title: Web Search
-  description: Use Web Search to search the web and get page summaries. Try changing your query prompt if you are getting an error or not the desired results.
+  description: Use Web Search to search the web and get page summaries. Try changing your query prompt if you are getting an error or not the desired results. Your query should be a natural language question.
   version: 1.3.1
 servers:
   - url: https://gptsearch.cyberthing.dev
@@ -27,8 +27,8 @@ paths:
                 type: object
                 properties:
                   links:
-                    description: Relevant links
                     type: array
+                    description: Relevant links
                     items:
                       type: string
                   date:
